--- a/views/userViews/forgotPasswordPage2.hbs
+++ b/views/userViews/forgotPasswordPage2.hbs
@@ -716,7 +716,7 @@
         </div>
         <script>
           let a = 60
-          h = Document.getElementById('timer')
+          h = document.getElementById('timer')
           let otpTimer = setInterval((){
             h.innerText = a--
             if (a === 0) {
