feature/payment/razorpay

--- a/views/userViews/checkoutPage.hbs
+++ b/views/userViews/checkoutPage.hbs
@@ -41,6 +41,8 @@
   <link id="pagestyle" rel="stylesheet" type="text/css" href="assets/css/skin-1.css">
   <link rel="stylesheet" type="text/css" href="assets/css/gray-look.css">
 
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
 </head>
 
 <body>
@@ -737,8 +739,7 @@
                           <div style="clear: both"></div>
 
                           <div id="exisitingAddressBox" class="collapse in">
-                            <div class="form-group uppercase"><strong>Select
-                                address</strong></div>
+                            <div class="form-group uppercase"><strong>Select address</strong></div>
                             <div class="w100 clearfix">
                               {{#each addressData}}
                               <div class="col-xs-12 col-sm-6 col-md-4">
@@ -767,179 +768,70 @@
                               {{/each}}
                             </div>
                             <!--/.w100-->
-                             <div class="gap"></div>
-                            
+                            <div class="gap"></div>
+
                             <div class="col-lg-12 clearfix">
                               <a class="btn   btn-primary" href="/account/addAddress"><i class="fa fa-plus-circle"></i>
-                                Add
-                                New
-                                Address </a>
+                                Add New Address </a>
                             </div>
 
                             <div class="gap"></div>
 
                             <div class="form-group required maxwidth300">
-                              <form action="/checkout2">
-                                <label for="InputCountry">Select Address <sup>*</sup>
-                                </label>
-                                <select class="form-control" required aria-required="true" id="SelectAddress"
-                                  name="chosenAddress">
-                                  {{#each addressData}}
-                                  <option value="{{this._id}}">
-                                    {{this.addressTitle}}</option>
-                                  {{/each}}
-                                </select>
-                                <br>
-                                <button class="btn btn-success" type="submit">
-                                  Order
-                                  <i class="fa fa-arrow-circle-right"></i>
-                                </button>
-                              </form>
+                              <label for="InputCountry">Select Address <sup>*</sup>
+                              </label>
+                              <select class="form-control" required aria-required="true" id="SelectAddress"
+                                name="chosenAddress">
+                                {{#each addressData}}
+                                <option value="{{this._id}}">
+                                  {{this.addressTitle}}</option>
+                                {{/each}}
+                              </select>
+                              <br>
                             </div>
 
                           </div>
 
-                          {{!-- <div id="newBillingAddressBox" class="collapse">
 
-                            <div class="form-group uppercase"><strong>New Billing
-                                address</strong></div>
+                          <div class="panel panel-default">
+                            <div class="panel-heading" role="tab" id="">
+                              <h4 class="panel-title">
+                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
+                                  href="#Paymentmethod" aria-expanded="false" aria-controls="Paymentmethod">
+                                  Payment method
+                                </a>
+                              </h4>
+                            </div>
 
+                            <div id="Paymentmethod" class="panel-collapse collapse" role="tabpanel">
+                              <div class="panel-body">
 
-                            <form>
-                              <div class="col-xs-12 col-sm-6">
-                                <div class="form-group required">
-                                  <label for="InputName">First Name <sup>*</sup>
-                                  </label>
-                                  <input required type="text" class="form-control" id="InputName"
-                                    placeholder="First Name">
-                                </div>
-                                <div class="form-group required">
-                                  <label for="InputLastName">Last Name
-                                    <sup>*</sup>
-                                  </label>
-                                  <input required type="text" class="form-control" id="InputLastName"
-                                    placeholder="Last Name">
-                                </div>
-                                <div class="form-group">
-                                  <label for="InputEmail">Email </label>
-                                  <input type="text" class="form-control" id="InputEmail" placeholder="Email">
-                                </div>
-                                <div class="form-group">
-                                  <label for="InputCompany">Company </label>
-                                  <input type="text" class="form-control" id="InputCompany" placeholder="Company">
-                                </div>
-                                <div class="form-group required">
-                                  <label for="InputAddress">Address <sup>*</sup>
-                                  </label>
-                                  <input required type="text" class="form-control" id="InputAddress"
-                                    placeholder="Address">
-                                </div>
-                                <div class="form-group">
-                                  <label for="InputAddress2">Address (Line 2)
-                                  </label>
-                                  <input type="text" class="form-control" id="InputAddress2" placeholder="Address">
-                                </div>
-                                <div class="form-group required">
-                                  <label for="InputCity">City <sup>*</sup>
-                                  </label>
-                                  <input required type="text" class="form-control" id="InputCity" placeholder="City">
-                                </div>
-                                <div class="form-group required">
-                                  <label for="InputState">State <sup>*</sup>
-                                  </label>
+                                <div class="onepage-payment">
 
-                                  <select class="form-control" required aria-required="true" id="InputState"
-                                    name="InputState">
-                                    <option value="">Choose</option>
-                                    <option value="1">Alabama</option>
-                                    <option value="2">Alaska</option>
-                                    <option value="3">Arizona</option>
-                                    <option value="4">Arkansas</option>
-                                    <option value="5">California</option>
-                                    <option value="6">Colorado</option>
-                                    <option value="7">Connecticut</option>
-                                    <option value="8">Delaware</option>
-                                    <option value="53">District of Columbia
-                                    </option>
-                                    <option value="9">Florida</option>
-                                    <option value="10">Georgia</option>
-                                    <option value="11">Hawaii</option>
-                                    <option value="12">Idaho</option>
-                                    <option value="13">Illinois</option>
-                                    <option value="14">Indiana</option>
-                                    <option value="15">Iowa</option>
-                                    <option value="16">Kansas</option>
-                                    <option value="17">Kentucky</option>
-                                    <option value="18">Louisiana</option>
-                                    <option value="19">Maine</option>
-                                    <option value="20">Maryland</option>
-                                    <option value="21">Massachusetts</option>
-                                    <option value="22">Michigan</option>
-                                    <option value="23">Minnesota</option>
-                                    <option value="24">Mississippi</option>
-                                    <option value="25">Missouri</option>
-                                    <option value="26">Montana</option>
-                                    <option value="27">Nebraska</option>
-                                    <option value="28">Nevada</option>
-                                    <option value="29">New Hampshire</option>
-                                    <option value="30">New Jersey</option>
-                                    <option value="31">New Mexico</option>
-                                    <option value="32">New York</option>
-                                    <option value="33">North Carolina</option>
-                                    <option value="34">North Dakota</option>
-                                    <option value="35">Ohio</option>
-                                    <option value="36">Oklahoma</option>
-                                    <option value="37">Oregon</option>
-                                    <option value="38">Pennsylvania</option>
-                                    <option value="51">Puerto Rico</option>
-                                    <option value="39">Rhode Island</option>
-                                    <option value="40">South Carolina</option>
-                                    <option value="41">South Dakota</option>
-                                    <option value="42">Tennessee</option>
-                                    <option value="43">Texas</option>
-                                    <option value="52">US Virgin Islands
-                                    </option>
-                                    <option value="44">Utah</option>
-                                    <option value="45">Vermont</option>
-                                    <option value="46">Virginia</option>
-                                    <option value="47">Washington</option>
-                                    <option value="48">West Virginia</option>
-                                    <option value="49">Wisconsin</option>
-                                    <option value="50">Wyoming</option>
-                                  </select>
+                                  <div style="clear:both;"></div>
+
+                                  <div class="card-paynemt-box payment-method">
+                                    <label class="radio-inline" for="CashOnDelivery"
+                                      aria-controls="CashOnDeliveryCollapse">
+                                      <input name="radios" id="COD" value="COD" type="radio" checked>Cash On Delivery
+                                    </label>
+                                  </div>
+
+                                  <div class="card-paynemt-box payment-method">
+                                    <label class="radio-inline" for="razorpay" aria-controls="CashOnDeliveryCollapse">
+                                      <input name="radios" id="razorpay" value="razorpay" type="radio">Razorpay
+                                    </label>
+                                  </div>
                                 </div>
                               </div>
-                              <div class="col-xs-12 col-sm-6">
-                                <div class="form-group required">
-                                  <label for="InputZip">PIN Code <sup>*</sup>
-                                  </label>
-                                  <input required type="text" class="form-control" id="InputZip"
-                                    placeholder="Zip / Postal Code">
-                                </div>
-                                <div class="form-group">
-                                  <label for="InputAdditionalInformation">Additional
-                                    information</label>
-                                  <textarea rows="3" cols="26" name="InputAdditionalInformation" class="form-control"
-                                    id="InputAdditionalInformation"></textarea>
-                                </div>
-                                <div class="form-group required">
-                                  <label for="InputMobile">Mobile phone
-                                    <sup>*</sup></label>
-                                  <input required type="tel" name="InputMobile" class="form-control" id="InputMobile">
-                                </div>
-                                <div class="form-group required">
-                                  <label for="addressAlias">Please assign an
-                                    address
-                                    title
-                                    for future reference. <sup>*</sup></label>
-                                  <input required type="text" value="My address" name="addressAlias"
-                                    class="form-control" id="addressAlias">
-                                </div>
-                              </div>
-                            </form>
+                            </div>
+                          </div>
 
-                          </div> --}}
+                          <br>
 
+                          <div id="orderBtn" class="pull-left btn btn-primary btn-lg">
+                            Order &nbsp; <i class="fa fa-arrow-circle-right"></i>
+                          </div>
 
                         </div>
                       </div>
@@ -1039,6 +931,69 @@
 
   <!-- include custom script for site  -->
   <script src="assets/js/script.js"></script>
+
+
+  <script>
+    const orderBtnElement = document.getElementById('orderBtn')
+    const CODElement = document.getElementById('COD')
+    const razorpayElement = document.getElementById('razorpay')
+
+    orderBtnElement.addEventListener('click', orderBtnClickFunction)
+
+    async function orderBtnClickFunction(event) {
+      try {
+        console.log('hhh')
+        event.preventDefault()
+
+        if (razorpayElement.checked) {
+          const orderResponse = await fetch('/checkout/razorpay/create/orderId', { method: 'POST' })
+          const order= await orderResponse.json()
+          console.log(order)
+          await openRazorpay(order.amount, order.id)
+
+        } else { //cash on delivery 
+          window.location.href = '/checkout/orderPlaced'
+        }
+
+
+      } catch (error) {
+        console.error(error)
+      }
+
+    }
+
+
+    async function openRazorpay(amount, orderId) {
+      try {
+        var options = {
+          "key": 'rzp_test_gBci89XBeQRRe9', // Enter the Key ID generated from the Dashboard
+          "amount": '' + amount, // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+          "currency": "INR",
+          "name": "Acme Corp",
+          "description": "Test Transaction",
+          "callback_url": "/checkout/orderPlaced",
+          "image": "https://example.com/your_logo",
+          "order_id": orderId, //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+          "theme": {
+            "color": "#3399cc"
+          }
+        };
+        var razorpay = new Razorpay(options);
+        razorpay.open()
+      } catch (error) {
+        console.error(error)
+      }
+
+    }
+
+
+
+
+  </script>
+
+  <script>
+
+  </script>
 
 
   <script>
